Fix uneven margin in portfolio panel

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -121,7 +121,7 @@ will be correctly compiled during `gulp serve` and `gulp`
   }
   
   .mdl-demo .portfolio-panel h1.mdl-typography--display-1 {
-    margin-top: -8px;
+    margin-top: -48px;
     margin-bottom: 0;
   }
   
@@ -440,7 +440,7 @@ will be correctly compiled during `gulp serve` and `gulp`
   }
   
   .mdl-demo #portfolio {
-    padding-top: 16px;
+    padding-top: 56px;
   }
   
   .portfolio-panel .mdl-card {
